Added sass related gitignores.

--- a/.gitignore
+++ b/.gitignore
@@ -25,12 +25,14 @@ npm-debug.log
 # Git ignore files for Typescript
 */*/*.js
 */*.js
-*.js
 
-# Ignore .css files 
+# Ignore .css files
 */*/*.css
 */*.css
 *.css
+
+# Ignore sass related files
+.sass-cache
 
 */*/*.map
 */*.map
