--- a/package.json
+++ b/package.json
@@ -10,6 +10,13 @@
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
+    "grunt": "~0.4.5",
+    "grunt-contrib-cssmin": "^1.0.0",
+    "grunt-contrib-jshint": "~0.10.0",
+    "grunt-contrib-nodeunit": "~0.4.1",
+    "grunt-contrib-sass": "~0.9.0",
+    "grunt-contrib-uglify": "~0.5.0",
+    "grunt-shell": "^1.2.1",
     "lite-server": "^2.0.1",
     "typescript": "^1.7.5"
   },
