--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "grunt-contrib-uglify": "~0.5.0",
     "grunt-shell": "^1.2.1",
     "lite-server": "^2.0.1",
+    "normalize.css": "^3.0.3",
     "typescript": "^1.7.5"
   },
   "scripts": {
