--- a/package.json
+++ b/package.json
@@ -6,14 +6,13 @@
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.6",
-    "tsd": "^0.6.5",
+    "typings": "^0.6.4",
     "zone.js": "^0.5.11"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
     "grunt": "~0.4.5",
     "grunt-contrib-cssmin": "^1.0.0",
-    "grunt-contrib-jshint": "~0.10.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-sass": "~0.9.0",
     "grunt-contrib-uglify": "~0.5.0",
