--- a/package.json
+++ b/package.json
@@ -11,7 +11,10 @@
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
+    "gh-pages": "^0.11.0",
     "grunt": "~0.4.5",
+    "grunt-contrib-clean": "^1.0.0",
+    "grunt-contrib-copy": "^1.0.0",
     "grunt-contrib-cssmin": "^1.0.0",
     "grunt-contrib-nodeunit": "~0.4.1",
     "grunt-contrib-sass": "~0.9.0",
@@ -22,6 +25,7 @@
     "typescript": "^1.7.5"
   },
   "scripts": {
+    "publish": "node publish.js",
     "tsc": "tsc",
     "tsc:w": "tsc -w",
     "lite": "lite-server",
