--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "rxjs": "5.0.0-beta.2",
     "systemjs": "0.19.6",
     "typings": "^0.6.4",
-    "zone.js": "^0.5.11"
+    "zone.js": "^0.5.11",
+    "leaflet": "^0.7.7"
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
