--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
     "es6-shim": "^0.35.0",
     "jquery": "^2.2.3",
     "leaflet": "^0.7.7",
+    "leaflet-easybutton": "^1.2.0",
     "normalize.css": "^3.0.3",
     "reflect-metadata": "0.1.2",
     "rxjs": "5.0.0-beta.2",
