--- a/package.json
+++ b/package.json
@@ -1,17 +1,26 @@
 {
   "dependencies": {
-    "angular2": "^2.0.0-beta.3",
+  "@angular/common": "2.0.0-rc.1",
+   "@angular/compiler": "2.0.0-rc.1",
+   "@angular/core": "2.0.0-rc.1",
+   "@angular/http": "2.0.0-rc.1",
+   "@angular/platform-browser": "2.0.0-rc.1",
+   "@angular/platform-browser-dynamic": "2.0.0-rc.1",
+   "@angular/router": "2.0.0-rc.1",
+   "@angular/router-deprecated": "2.0.0-rc.1",
+   "@angular/upgrade": "2.0.0-rc.1",
+   "@angular/http": "2.0.0-rc.1",
+   "reflect-metadata": "^0.1.3",
+   "rxjs": "5.0.0-beta.6",
+   "systemjs": "^0.19.27",
+   "zone.js": "^0.6.12",
     "es6-promise": "^3.0.2",
     "es6-shim": "^0.35.0",
     "jquery": "^2.2.3",
     "leaflet": "^0.7.7",
-    "leaflet-easybutton": "^1.2.0",
     "normalize.css": "^3.0.3",
-    "reflect-metadata": "0.1.2",
-    "rxjs": "5.0.0-beta.2",
-    "systemjs": "0.19.6",
-    "typings": "^0.6.4",
-    "zone.js": "^0.5.11"
+    "typings": "^0.6.4"
+
   },
   "devDependencies": {
     "concurrently": "^1.0.0",
