--- a/package.json
+++ b/package.json
@@ -1,25 +1,25 @@
 {
   "dependencies": {
     "@angular/common": "2.0.0-rc.4",
-   "@angular/compiler": "2.0.0-rc.4",
-   "@angular/core": "2.0.0-rc.4",
-   "@angular/forms": "0.2.0",
-   "@angular/http": "2.0.0-rc.4",
-   "@angular/platform-browser": "2.0.0-rc.4",
-   "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-   "@angular/router": "3.0.0-beta.1",
-   "@angular/router-deprecated": "2.0.0-rc.2",
-   "@angular/upgrade": "2.0.0-rc.4",
-   "systemjs": "0.19.27",
-   "core-js": "^2.4.0",
-   "reflect-metadata": "^0.1.3",
-   "rxjs": "5.0.0-beta.6",
-   "zone.js": "^0.6.12",
-   "angular2-in-memory-web-api": "0.0.14",
-   "bootstrap": "^3.3.6",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.1",
+    "@angular/router-deprecated": "2.0.0-rc.2",
+    "@angular/upgrade": "2.0.0-rc.4",
+    "@ng-bootstrap/ng-bootstrap": "^1.0.0-alpha.0",
+    "angular2-in-memory-web-api": "0.0.14",
+    "core-js": "^2.4.0",
     "jquery": "^2.2.3",
     "leaflet": "^0.7.7",
-    "normalize.css": "^3.0.3"
+    "normalize.css": "^3.0.3",
+    "reflect-metadata": "^0.1.3",
+    "rxjs": "5.0.0-beta.6",
+    "systemjs": "0.19.27",
+    "zone.js": "^0.6.12"
   },
   "devDependencies": {
     "gh-pages": "^0.11.0",
@@ -35,7 +35,7 @@
     "concurrently": "^2.0.0",
     "lite-server": "^2.2.0",
     "typescript": "^1.8.10",
-    "typings":"^1.0.4"
+    "typings": "^1.0.4"
   },
   "scripts": {
     "publish": "node publish.js",
