--- a/package.json
+++ b/package.json
@@ -1,47 +1,56 @@
 {
+  "name": "CSCreen",
+  "version": "1.0.0",
+  "scripts": {
+    "start": "webpack-dev-server --inline --progress --port 8080",
+    "build": "rimraf dist && webpack --config config/webpack.prod.js --progress --profile --bail",
+    "postinstall": "typings install"
+  },
+  "license": "MIT",
   "dependencies": {
     "@angular/common": "2.0.0-rc.4",
-   "@angular/compiler": "2.0.0-rc.4",
-   "@angular/core": "2.0.0-rc.4",
-   "@angular/forms": "0.2.0",
-   "@angular/http": "2.0.0-rc.4",
-   "@angular/platform-browser": "2.0.0-rc.4",
-   "@angular/platform-browser-dynamic": "2.0.0-rc.4",
-   "@angular/router": "3.0.0-beta.1",
-   "@angular/router-deprecated": "2.0.0-rc.2",
-   "@angular/upgrade": "2.0.0-rc.4",
-   "systemjs": "0.19.27",
-   "core-js": "^2.4.0",
-   "reflect-metadata": "^0.1.3",
-   "rxjs": "5.0.0-beta.6",
-   "zone.js": "^0.6.12",
-   "angular2-in-memory-web-api": "0.0.14",
-    "jquery": "^2.2.3",
+    "@angular/compiler": "2.0.0-rc.4",
+    "@angular/core": "2.0.0-rc.4",
+    "@angular/forms": "0.2.0",
+    "@angular/http": "2.0.0-rc.4",
+    "@angular/platform-browser": "2.0.0-rc.4",
+    "@angular/platform-browser-dynamic": "2.0.0-rc.4",
+    "@angular/router": "3.0.0-beta.1",
+    "core-js": "^2.4.0",
+    "reflect-metadata": "0.1.2",
+    "rxjs": "5.0.0-beta.6",
+    "zone.js": "0.6.12",
+    "jquery": "^2.2.4",
     "leaflet": "^0.7.7",
     "normalize.css": "^3.0.3"
   },
   "devDependencies": {
+    "angular2-template-loader": "^0.4.0",
+    "css-loader": "^0.23.1",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.8.5",
     "gh-pages": "^0.11.0",
-    "grunt": "~0.4.5",
-    "grunt-contrib-clean": "^1.0.0",
-    "grunt-contrib-copy": "^1.0.0",
-    "grunt-contrib-cssmin": "^1.0.0",
-    "grunt-contrib-nodeunit": "~0.4.1",
-    "grunt-contrib-sass": "~0.9.0",
-    "grunt-contrib-uglify": "~0.5.0",
-    "grunt-shell": "^1.2.1",
-    "normalize.css": "^3.0.3",
-    "concurrently": "^2.0.0",
-    "lite-server": "^2.2.0",
+    "html-loader": "^0.4.3",
+    "html-webpack-plugin": "^2.15.0",
+    "jasmine-core": "^2.4.1",
+    "json-loader": "^0.5.4",
+    "karma": "^0.13.22",
+    "karma-jasmine": "^0.3.8",
+    "karma-phantomjs-launcher": "^1.0.0",
+    "karma-sourcemap-loader": "^0.3.7",
+    "karma-webpack": "^1.7.0",
+    "node-sass": "^3.8.0",
+    "null-loader": "^0.1.1",
+    "phantomjs-prebuilt": "^2.1.7",
+    "raw-loader": "^0.5.1",
+    "rimraf": "^2.5.2",
+    "sass-loader": "^4.0.0",
+    "style-loader": "^0.13.1",
+    "ts-loader": "^0.8.1",
     "typescript": "^1.8.10",
-    "typings":"^1.0.4"
-  },
-  "scripts": {
-    "publish": "node publish.js",
-    "tsc": "tsc",
-    "tsc:w": "tsc -w",
-    "lite": "lite-server",
-    "start": "concurrent \"npm run tsc:w\" \"npm run lite\" ",
-    "postinstall": "typings install"
+    "typings": "^1.0.4",
+    "webpack": "^1.13.0",
+    "webpack-dev-server": "^1.14.1",
+    "webpack-merge": "^0.14.0"
   }
 }
